I lied there's still overflow issues on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -42,7 +42,6 @@
 
 /* burger toggles between dropdownContainer and dropdownContainer-active */
 .dropdownContainer {
-  display: block;
   position: absolute;
   width: 100%;
   height: 100vh;
@@ -51,6 +50,7 @@
   z-index: 1;
   transform: translateX(100%);
   transition: transform 0.6s ease-in;
+  overflow:hidden;
 }
 
 .dropdownContainer-active {
